--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -14,7 +15,10 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
